--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nhật-ký-chờ-em",
+  "name": "nhat-ky-cho-em",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,20 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "0.344.0",
-    "date-fns": "4.1.0",
-    "@supabase/supabase-js": "2",
-    "antd": "5.22.2",
-    "@ant-design/colors": "7.1.0",
-    "@ant-design/icons": "5.4.0",
-    "dayjs": "1.11.10"
+    "@supabase/supabase-js": "^2.45.0",
+    "antd": "^5.22.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.10",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "typescript": "^5.5.0",
+    "vite": "^5.4.0"
   }
 }
